--- a/styles/products.css
+++ b/styles/products.css
@@ -1,6 +1,9 @@
+.card__name {
+  font-size: 12px;
+  font-weight: 500; }
+
 .products {
-  width: 944px;
-  max-width: 1024px;
+  max-width: 944px;
   display: grid;
   grid-template-columns: repeat(4, 200px);
   grid-template-rows: repeat(2, 403px);
@@ -31,8 +34,6 @@
             justify-content: center;
     margin-bottom: 45px; }
   .card__name {
-    font-size: 12px;
-    font-weight: 500;
     line-height: 15px;
     margin: 0; }
   .card__code {
@@ -45,7 +46,7 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex; }
-    .card__rating__rating-stars {
+    .card__rating .stars {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -54,17 +55,13 @@
               justify-content: flex-start;
       padding: 0;
       list-style-type: none;
-      margin: 0;
-      padding-top: 1px;
-      padding-left: 1px; }
-      .card__rating__rating-stars .rating-star {
+      margin: 0; }
+      .card__rating .stars__star {
         width: 15px;
         height: 15px;
         margin-right: 4px;
         background: url(../images/star.svg) no-repeat; }
-      .card__rating__rating-stars .rating-star:nth-child(-n+4) {
-        background: url(../images/star-active.svg) no-repeat; }
-    .card__rating__rating-count {
+    .card__rating .count {
       font-size: 11px;
       line-height: 13px;
       margin-left: auto;
@@ -73,10 +70,10 @@
               align-items: center; }
   .card__price {
     margin: 18px 0 20px; }
-    .card__price__text {
+    .card__price--text {
       font-size: 11px;
       line-height: 13px; }
-    .card__price__amount {
+    .card__price--amount {
       font-size: 16px;
       font-weight: bold;
       line-height: 19px;
@@ -110,5 +107,35 @@
       border: 1px solid #00acdc;
       border-radius: 5px;
       color: #00acdc; }
+
+.star--1 .stars__star:nth-child(-n+1) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--1 .stars__star:nth-child(-n+1) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--2 .stars__star:nth-child(-n+2) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--1 .stars__star:nth-child(-n+1) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--2 .stars__star:nth-child(-n+2) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--3 .stars__star:nth-child(-n+3) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--1 .stars__star:nth-child(-n+1) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--2 .stars__star:nth-child(-n+2) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--3 .stars__star:nth-child(-n+3) {
+  background: url(../images/star-active.svg) no-repeat; }
+
+.star--4 .stars__star:nth-child(-n+4) {
+  background: url(../images/star-active.svg) no-repeat; }
 
 /*# sourceMappingURL=products.css.map */
