--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,7 @@
+.header .nav {
+  font-size: 12px;
+  font-weight: 500; }
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -23,8 +27,6 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    font-weight: 500;
-    font-size: 12px;
     text-transform: uppercase;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
