--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -28,6 +28,7 @@
       line-height: 14px;
       font-style: normal;
       color: #000;
+      transition: color 0.2s ease-in-out;
     }
 
     &__item-link:hover,
