--- a/styles/header.css
+++ b/styles/header.css
@@ -42,7 +42,9 @@
       text-decoration: none;
       line-height: 14px;
       font-style: normal;
-      color: #000; }
+      color: #000;
+      -webkit-transition: color 0.2s ease-in-out;
+      transition: color 0.2s ease-in-out; }
     .header .nav__item-link:hover,
     .header .nav .is-active {
       color: #00acdc; }
