--- a/styles/products.css
+++ b/styles/products.css
@@ -13,7 +13,7 @@
 .card {
   width: 200px;
   height: 403px;
-  padding: 30px 14px 14px;
+  padding: 14px;
   background: #ffff;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
@@ -34,7 +34,17 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-bottom: 45px; }
+    margin-bottom: 45px;
+    padding: 14px 0;
+    border: 3px solid transparent;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out; }
+    .card__img:hover {
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
+      border: 2px solid #f3f3f3;
+      border-radius: 5px;
+      cursor: pointer; }
   .card__name {
     line-height: 15px;
     margin: 0; }
@@ -102,10 +112,10 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out; }
+    -webkit-transition: background-color, color, border, border-radius, 0.5s ease-in-out;
+    transition: background-color, color, border, border-radius, 0.5s ease-in-out; }
     .card__purchace:hover {
-      background: #fff;
+      background-color: #fff;
       border: 1px solid #00acdc;
       border-radius: 5px;
       color: #00acdc; }
