--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -28,11 +28,14 @@
     margin-bottom: 45px;
     padding: 14px 0;
     border: 3px solid transparent ;
-    transition: all 1s ease-in-out;
+    transition: transform 1s,
+      border,
+      border-radius,
+      ease-in-out;
 
     &:hover {
       transform: scale(1.2);
-      border: 2px solid #f3f3f3;
+      border: 3px solid #f3f3f3;
       border-radius: 5px;
       cursor: pointer;
     }
